SERVER-8442 don't release() direct m/r cursors to shards